@@ -54,7 +54,3 @@ int __signals_blocked;
 /****************************************************************************/
 
 BOOL __check_abort_enabled = TRUE;
-
-/****************************************************************************/
-
-BOOL __termination_message_disabled;
