@@ -76,10 +76,6 @@ extern int NOCOMMON __signals_blocked;
 
 /****************************************************************************/
 
-extern BOOL NOCOMMON __termination_message_disabled;
-
-/****************************************************************************/
-
 #ifndef _STDLIB_HEADERS_H
 #include "stdlib_headers.h"
 #endif /* _STDLIB_HEADERS_H */
